# WatchDock

./: .gitignore  .pypirc.example  ARTIFACT_GUIDE.md  ATTACH_EXECUTABLES.md  BUILD.md  BUILD_EXECUTABLES_STEPS.md  CHANGELOG.md  COMMIT_COMMANDS.md  GITHUB_RELEASE_GUIDE.md  MANIFEST.in  Makefile  NEXT_STEPS.md  PUBLISHING.md  PYPI_SETUP.md  PYPI_VS_EXECUTABLES.md  QUICK_PUBLISH.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOW.md  RELEASE_READINESS.md  TEST_RESULTS.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-executables.yml  publish.yml
scripts/: generate_release_links.py
watchdock/: ai_processor.py  config.py  file_organizer.py  gui.py  main.py  ui.py  ui_main.py
watchdock/static/css/: style.css
watchdock/static/js/: app.js
watchdock/templates/: index.html
